add not possibility to click 2 times on climb on board + add the snackbar
