# server/routes.js
@@ -70,7 +70,7 @@ router.post('/bookings', itinarie_userController.itinarie_userCreate);
 router.get('/bookings', itinarie_userController.itinaries_userList);
 router.get('/bookings/:fk_user', isAuthorized, itinarie_userController.itinarie_userByUserConnected)
 router.get('/booking/:itinaries_user_id', itinarie_userController.itinarie_userById)
-router.delete('/booking/:itinaries_user_id', itinarie_userController.itinaries_userDelete)
+router.delete('/booking/user/:fk_user/itinarie/:fk_itinaries', itinarie_userController.itinaries_userDelete)
 router.patch('/booking/:itinaries_user_id/accept', itinarie_userController.itinaries_userAcceptPassenger)
 router.patch('/booking/:itinaries_user_id/deny', itinarie_userController.itinaries_userRefusedPassenger)
 
